--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
 							<h4>Technologies &amp; Frameworks</h4>
 							<p style="text-align:center;">These are the following Technologies and Frameworks that I have experience in below:</p>
 							<ul class="icons">
-                				<li><img src="https://img.icons8.com/color/48/000000/mongodb.png" alt="Mongodb" title="Mongodb"><p>MongoDB</p></li>
-                				<li><img src="https://img.icons8.com/color/48/000000/javascript.png" alt="Javascript" title="Javascript"><p>JavaScript</p></li>
-                				<li><img src="https://img.icons8.com/material-outlined/48/000000/github.png" alt="GitHub" title="GitHub"><p>GitHub</p></li>
-                				<li><img src="https://img.icons8.com/color/48/000000/react-native.png" alt="React" title="React"><p>React</p></li>
-                				<li><img src="https://img.icons8.com/color/48/000000/html-5--v1.png" alt="HTML-5" title="HTML-5"><p>HTML5</p></li>
-                				<li><img src="https://img.icons8.com/color/48/000000/python.png" alt="Python" title="Python"><p>Python</p></li>
-                				<li><img src="https://img.icons8.com/fluent/48/000000/maria-db.png" alt="Maria-db" title="Maria-db"><p>MariaDB</p></li>
-                				<li><img src="https://img.icons8.com/color/48/000000/linux--v1.png" alt="Linux" title="Linux"><p>Linux</p></li>
-                				<li><img src="https://img.icons8.com/color/48/000000/visual-studio-code-2019.png" alt="Visual Studio Code" title="Visual Studio Code"><p>Visual Studio Code</p></li>
-                				<li><img src="https://img.icons8.com/color/48/000000/bootstrap.png" alt="Bootstrap" title="Bootstrap"><p>Bootstrap</p></li>
-                				<li><img src="https://img.icons8.com/ios/48/000000/django.png" alt="Django" title="Django"><p>Django</p></li>
-                				<li><img src="https://img.icons8.com/color/50/000000/postgreesql.png" alt="PostgreeSQL" title="PostgreeSQL"><p>PostgreSQL</p></li>
-                				<li><img src="https://img.icons8.com/color/48/000000/nodejs.png" alt="nodejs" title="nodejs"><p>Node.js</p></li>
-						<li><img src="https://img.icons8.com/color/48/000000/mysql-logo.png" alt="mysql" title="mysql"><p>MySQL</p></li>
-						<li><img src="https://img.icons8.com/ios-filled/48/000000/qt.png" alt="qtdesigner" title="qtdesigner"><p>QT Designer</p></li>
-						<li><img src="https://img.icons8.com/color/48/000000/css3.png" alt="css3" title="css3"><p>CSS3</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/mongodb.png"><p>MongoDB</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/javascript.png"><p>JavaScript</p></li>
+                				<li><img src="https://img.icons8.com/material-outlined/48/000000/github.png"><p>GitHub</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/react-native.png"><p>React</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/html-5--v1.png"><p>HTML5</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/python.png"><p>Python</p></li>
+                				<li><img src="https://img.icons8.com/fluent/48/000000/maria-db.png"><p>MariaDB</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/linux--v1.png"><p>Linux</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/visual-studio-code-2019.png"><p>Visual Studio Code</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/bootstrap.png"><p>Bootstrap</p></li>
+                				<li><img src="https://img.icons8.com/ios/48/000000/django.png"><p>Django</p></li>
+                				<li><img src="https://img.icons8.com/color/50/000000/postgreesql.png"><p>PostgreSQL</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/nodejs.png"><p>Node.js</p></li>
+						<li><img src="https://img.icons8.com/color/48/000000/mysql-logo.png"><p>MySQL</p></li>
+						<li><img src="https://img.icons8.com/ios-filled/48/000000/qt.png"><p>QT Designer</p></li>
+						<li><img src="https://img.icons8.com/color/48/000000/css3.png"><p>CSS3</p></li>
             				</ul>
 							</header>
 							</article>
