--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<header class="major">
 									<h2>About Me</h2>
 									<img src="photo.JPG" alt="Me" width="300" height="300">
-									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Designing. Below I have listed the technologies and frameworks that I currently use. I continue to learn and develop my skills in programming and continuously learning new frameworks and languages. Aside from coding and learning new technologies and frameworks some of my hobbies are sports. I enjoy watching NFL, NHL, NBA, and Soccer. Also, I enjoy playing soccer in my free time which is one of my favourite sports to play. Please look at résumé below:</p>
+									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Designing. Below I have listed the technologies and frameworks that I currently use. I continue to learn and develop my skills in programming and continuously learning new frameworks and technologies. Aside from learning new technologies and frameworks some of my hobbies are sports. I enjoy watching NFL, NHL, NBA, and Soccer. Also, I enjoy playing soccer in my free time which is one of my favourite sports to play. Have a look at résumé below:</p>
 									<button onclick="window.location.href='https://drive.google.com/file/d/1VGuWdozvWUy8GmnXgiEMHB-iRDQENE7_/view?usp=sharing';" target="_blank">
       									Résumé
     								</button>
