--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 						<li><img src="https://img.icons8.com/ios-filled/48/000000/qt.png"><p>QT Designer</p></li>
 						<li><img src="https://img.icons8.com/color/48/000000/css3.png"><p>CSS3</p></li>
 						<li><img src="https://img.icons8.com/color/50/000000/cloud-function.png"/><p>Swagger API</p></li>
+						<li><img src="https://img.icons8.com/color/48/000000/git.png"/><p>GIT</p></li>
             				</ul>
 							</header>
 							</article>
