--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Zamir Lalji &ndash; Backend Software Developer</h1>
+						<p style="text-align:center;">Date/Time: <span id="datetime"></span></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -121,6 +122,8 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>var dt = new Date();document.getElementById("datetime").innerHTML = dt.toLocaleString();</script>
+
 
 	</body>
 </html>
