--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
+							<li class="active"><a href="#about">About Me</a></li>
+							<li class="active"><a href="#projects">Projects</a></li>
+							<li class="active"><a href="#skills">Technologies&Frameworks</a></li>
+							<li class="active"><a href="#contact">Contact</a></li>
 							
 						</ul>
 						<ul class="icons">
@@ -47,20 +51,25 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
+									<article id="about">
 									<h2>About Me</h2>
 									<img src="photo.JPG" alt="Me" width="300" height="300">
 									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Designing. Below I have listed the technologies and frameworks that I currently use. I continue to learn and develop my skills in programming and continuously learning new frameworks and technologies. Aside from learning new technologies and frameworks some of my hobbies are sports. I enjoy watching NFL, NHL, NBA, and Soccer. Also, I enjoy playing soccer in my free time which is one of my favourite sports to play. Have a look at résumé below:</p>
 									<button onclick="window.location.href='https://drive.google.com/file/d/1VGuWdozvWUy8GmnXgiEMHB-iRDQENE7_/view?usp=sharing';" target="_blank">
       									Résumé
     								</button>
+    							</article>
 								</header>
 							</article>
 							<header class="major">
+								<article id="projects">
 							<a href="Projects.html" target="_blank"><h3>Projects</h3></a>
 								<p style="text-align:center;">Links to all my projects that I have created. Many more to come.</p>
 							</header>
+						</article>
 							<article class="post featured">
 								<header class="major">
+									<article id="skills">
 							<h4>Technologies &amp; Frameworks</h4>
 							<p style="text-align:center;">These are the following Technologies and Frameworks that I have experience in below:</p>
 							<ul class="icons">
@@ -83,9 +92,11 @@
 						<li><img src="https://img.icons8.com/color/50/000000/cloud-function.png"/><p style="text-align:center;">Swagger API</p></li>
 						<li><img src="https://img.icons8.com/color/48/000000/git.png"/><p style="text-align:center;">Git</p></li>
             				</ul>
+            			</article>
 							</header>
 							</article>
 							<article class="post featured">
+								<article id="contact">
 							<h4>Contact Me</h4>
 						  <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xqkwqwzg" method="post">
     							<fieldset id="fs-frm-inputs">
@@ -99,6 +110,7 @@
     							</fieldset>
     							<input type="submit" value="Send Message">
   							</form>
+  						</article>
 						</article>
 
 						<!-- Footer -->
