--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 							<li><a href="https://linkedin.com/in/zamir-lalji-b1021b1b2" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkendIn</span></a></li>
 							<li><a href="https://github.com/Zamir95/" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 							<li><a href="https://twitter.com/zamir_lalji#" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.instagram.com/zamlalji/" class="icon brands fa-instagram" target="_blank"><span class="label">IG</span></a></li>
 					</nav>
 
 				<!-- Main -->
