--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li class="active"><a href="#about">About Me</a></li>
 							<li class="active"><a href="#projects">Projects</a></li>
-							<li class="active"><a href="#skills">Technologies&Frameworks</a></li>
+							<li class="active"><a href="#skills">Skills</a></li>
 							<li class="active"><a href="#contact">Contact</a></li>
 							
 						</ul>
