--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 						<!-- Footer -->
 						<footer class="text-center">
-  							<a href="index.html"><button type="button" class="block">Back to Top</button></a>
+  							<a href="#"><button type="button" class="block">Back to Top</button></a>
 						</footer>
 					</div>
 
