Updated Project html file
File Updated

--- a/Projects.html
+++ b/Projects.html
@@ -36,6 +36,8 @@
 		<p style="text-align:center; margin: 20px;">To-Do app that lets you enter a product name and the price and display it. Also lets you update the product by removing the product if there isn&#39;t anymore more of that product and replace it with another product.</p> 
 		<a href="https://github.com/Zamir95/Restful-API-using-NODE-JS-and-Express-JS" target="_blank"><button type="button" class="btn btn-primary btn-md">Rest-API JavaScript</button></a>
 		<p style="text-align:center; margin: 20px;">REST API for books which allows the user to add books, delete, edit or remove the books. Books can be any book but for this project I just used programming books.</p>
+		<a href="https://github.com/Zamir95/NodeJs-REST-APIs-" target="_blank"><button type="button" class="btn btn-primary btn-md">Rest-API NodeJs</button></a>
+		<p style="text-align:center; margin: 20px;">This a Nodejs Rest API using MySQL (backend). The object of this project to is pull records from MySQL and use the following RestAPI methods. The first method that was used is the GET method. This method allows the user to get all posts records from the DB. Post-add: Used to add post records from the DB, POST add post comment: Used to add post comment, PUT LIKE: Used to like post from each record in the DB, POST DISLIKE: Used to dislike post in the DB and POST DELETE: Used to delete post in the DB. In order to run the project you need to run it on your local machine use: localhost: 3000.</p>
 		<a href="https://github.com/Zamir95/Piano-Project" target="_blank"><button type="button" class="btn btn-primary btn-md">JavaScript Piano Keyboard</button></a>
 		<p style="text-align:center; margin: 20px;">Hard coded piano that I made with sound and background.</p>
 		</header>
