--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Zamir Lalji &ndash; Backend Software Developer</h1>
+						<h1>Zamir Lalji <br> Backend Software Developer</h1>
 						<p style="text-align:center;">Date/Time: <span id="datetime"></span></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
