--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 						<li><img src="https://img.icons8.com/color/48/000000/css3.png"><p style="text-align:center;">CSS3</p></li>
 						<li><img src="https://img.icons8.com/color/50/000000/cloud-function.png"/><p style="text-align:center;">Swagger API</p></li>
 						<li><img src="https://img.icons8.com/color/48/000000/git.png"/><p style="text-align:center;">Git</p></li>
+						li><img src="https://img.icons8.com/color/48/000000/heroku.png"/><p style="text-align:center;">Heroku</p></li>
             				</ul>
             			</article>
 							</header>
