--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 						<li><img src="https://img.icons8.com/color/50/000000/cloud-function.png"/><p style="text-align:center;">Swagger API</p></li>
 						<li><img src="https://img.icons8.com/color/48/000000/git.png"/><p style="text-align:center;">Git</p></li>
 						<li><img src="https://img.icons8.com/color/48/000000/heroku.png"/><p style="text-align:center;">Heroku</p></li>
+						<li><img src="https://img.icons8.com/fluent/48/000000/sublime-text.png"/><p style="text-align:center;">Sublime Text</p></li>
             				</ul>
             			</article>
 							</header>
