--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 							<article class="post featured">
 								<header class="major">
 									<article id="skills">
-							<h4>Technologies &#44; Frameworks &amp; IDE</h4>
-							<p style="text-align:center;">These are the following Technologies and Frameworks that I have experience in below:</p><br>
+							<h4>Technologies&#44; Frameworks &amp; IDE</h4>
+							<p style="text-align:center;">These are the following Technologies&#44; Frameworks&amp; IDE's that I have experience in below:</p><br>
 							<ul class="icons">
                 				<li><img src="https://img.icons8.com/color/48/000000/mongodb.png"><p style="text-align:center;">MongoDB</p></li>
                 				<li><img src="https://img.icons8.com/color/48/000000/javascript.png"><p style="text-align:center;">JavaScript</p></li>
