Added a new project
Airline Django Project added

--- a/Projects.html
+++ b/Projects.html
@@ -40,6 +40,8 @@
 		<p style="text-align:center; margin: 20px;">This a Nodejs Rest API using MySQL (backend). The object of this project to is pull records from MySQL and use the following RestAPI methods. The first method that was used is the GET method. This method allows the user to get all posts records from the DB. Post-add: Used to add post records from the DB, POST add post comment: Used to add post comment, PUT LIKE: Used to like post from each record in the DB, POST DISLIKE: Used to dislike post in the DB and POST DELETE: Used to delete post in the DB. In order to run the project you need to run it on your local machine use: localhost: 3000.</p>
 		<a href="https://github.com/Zamir95/MiniMongoDBProject" target="_blank"><button type="button" class="btn btn-primary btn-md">MongoDB Books Projects</button></a>
 		<p style="text-align:center; margin: 20px;">MongoDB Project that inserts, finds, deletes and updates books based on author, year, published date, etc.</p>
+		<a href="https://drive.google.com/drive/folders/1mqoT4IwTjUOVo6rZpaRIrUa3jbeXNKxa?usp=sharing" target="_blank"><button type="button" class="btn btn-primary btn-md">Django Project</button></a>
+		<p style="text-align:center; margin: 20px;">Django web application project. Object of this project is to show case 2 mini projects (a webpage that displays whether it is Halloween or not and a reminder list) and a major project about airline (flights, places and passengers) Please refer to the ReadME file in the project.</p>
 		<a href="https://github.com/Zamir95/Piano-Project" target="_blank"><button type="button" class="btn btn-primary btn-md">JavaScript Piano Keyboard</button></a>
 		<p style="text-align:center; margin: 20px;">Hard coded piano that I made with sound and background.</p>
 		</header>
