--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<header class="major">
 									<article id="about">
 									<h2>About Me</h2>
-									<img src="Me.jpg" alt="Me" width="300" height="300">
+									<img src="Sitephoto.jpg" alt="Me" width="300" height="300">
 									<p style="text-align:center;">I am an Individual who is passionate about Software Developing, Testing, Debugging, and Designing among other things tech related. Below I have listed the technologies and frameworks that I currently use, and this list is being updated constantly as I continue to learn new things.</p><br><p style="text-align:center;">I strive to learn and develop my skills in programming by continuously testing my skills with various projects, and by learning new frameworks and technologies.</p><br><p style="text-align:center;">Aside from learning new technologies and frameworks my hobbies are sports and physical activities. In my free time, I also work out at the gym and sports arenas to keep my body in top physical shape because it is important to have a strong mind and body.</p>    							</article>
 								</header>
 							</article>
