--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							
 						</ul>
 						<ul class="icons">
-							<li><a href="www.linkedin.com/in/zamir-lalji" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkendIn</span></a></li>
+							<li><a href="https://linkedin.com/in/zamir-lalji" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkendIn</span></a></li>
 							<li><a href="https://github.com/Zamir95/" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 							<li><a href="https://twitter.com/zamir_lalji#" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 					</nav>
