Added to the Project Page and Removed from index

--- a/Projects.html
+++ b/Projects.html
@@ -44,6 +44,8 @@
 		<p style="text-align:center; margin: 20px;">Django web application project. Object of this project is to show case 2 mini projects (a webpage that displays whether it is Halloween or not and a reminder list) and a major project about airline (flights, places and passengers) Please refer to the ReadME file in the project.</p>
 		<a href="https://github.com/Zamir95/Piano-Project" target="_blank"><button type="button" class="btn btn-primary btn-md">JavaScript Piano Keyboard</button></a>
 		<p style="text-align:center; margin: 20px;">Hard coded piano that I made with sound and background.</p>
+		<a href="https://github.com/Zamir95/MovieProject" target="_blank"><button type="button" class="btn btn-primary btn-md">Movie Project</button></a>
+		<p style="text-align:center; margin: 20px;">Movie Project which allow the user to add, delete or view different movies that the user wants to rate. Can also add a description of the movie and why they like it. Written in JavaScript, HTML, and CSS.</p>
 		</header>
 
 	</ul>
