--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
                 				<li><img src="https://img.icons8.com/color/48/000000/react-native.png"><p style="text-align:center;">React</p></li>
                 				<li><img src="https://img.icons8.com/color/48/000000/html-5--v1.png"><p style="text-align:center;">HTML5</p></li>
                 				<li><img src="https://img.icons8.com/color/48/000000/python.png"><p style="text-align:center;">Python</p></li>
-                				<li><img src="https://img.icons8.com/fluent/48/000000/maria-db.png"><p style="text-align:center;">MariaDB</p></li>
+                				<!-- <li><img src="https://img.icons8.com/fluent/48/000000/maria-db.png"><p style="text-align:center;">MariaDB</p></li> -->
                 				<li><img src="https://img.icons8.com/color/48/000000/linux--v1.png"><p style="text-align:center;">Linux</p></li>
                 				<li><img src="https://img.icons8.com/color/48/000000/visual-studio-code-2019.png"><p style="text-align:center;">Visual Studio Code</p></li>
                 				<li><img src="https://img.icons8.com/color/48/000000/bootstrap.png"><p style="text-align:center;">Bootstrap</p></li>
                 				<li><img src="https://img.icons8.com/ios/48/000000/django.png"><p style="text-align:center;">Django</p></li>
-                				<li><img src="https://img.icons8.com/color/50/000000/postgreesql.png"><p style="text-align:center;">PostgreSQL</p></li>
+                				<!-- <li><img src="https://img.icons8.com/color/50/000000/postgreesql.png"><p style="text-align:center;">PostgreSQL</p></li> -->
                 				<li><img src="https://img.icons8.com/color/48/000000/nodejs.png"><p style="text-align:center;">Node.js</p></li>
 						<li><img src="https://img.icons8.com/color/48/000000/mysql-logo.png"><p style="text-align:center;">MySQL</p></li>
-						<li><img src="https://img.icons8.com/ios-filled/48/000000/qt.png"><p style="text-align:center;">QT Designer</p></li>
+						<!-- <li><img src="https://img.icons8.com/ios-filled/48/000000/qt.png"><p style="text-align:center;">QT Designer</p></li> -->
 						<li><img src="https://img.icons8.com/color/48/000000/css3.png"><p style="text-align:center;">CSS3</p></li>
 						<li><img src="https://img.icons8.com/color/50/000000/cloud-function.png"/><p style="text-align:center;">Swagger API</p></li>
 						<li><img src="https://img.icons8.com/color/48/000000/git.png"/><p style="text-align:center;">Git</p></li>
