Added a new project; Apple Watch Project

--- a/Projects.html
+++ b/Projects.html
@@ -46,6 +46,8 @@
 		<p style="text-align:center; margin: 20px;">Hard coded piano that I made with sound and background.</p>
 		<a href="https://github.com/Zamir95/MovieProject" target="_blank"><button type="button" class="btn btn-primary btn-md">Movie Project</button></a>
 		<p style="text-align:center; margin: 20px;">Movie Project which allow the user to add, delete or view different movies that the user wants to rate. Can also add a description of the movie and why they like it. Written in JavaScript, HTML, and CSS.</p>
+		<a href="https://github.com/Zamir95/first-react-app" target="_blank"><button type="button" class="btn btn-primary btn-md">Apple Watch Project</button></a>
+		<p style="text-align:center; margin: 20px;">Apple Watch Project. Allows the user to be able to choose between 4 different color watch bands. The apple watch allows the user show the time that is alows updated when running the program  and also allows the sure to see a heart beat animation. The purpose of the project was to test my react skills and javascript skills.</p>
 		</header>
 
 	</ul>
