Edited the Project Page

--- a/Projects.html
+++ b/Projects.html
@@ -11,7 +11,7 @@
  <body style="background-color: #585858;">
 	 <header class="major" style="margin: 20px;">
 		<h1>Projects</h1>
-		<p style="text-align:center;">This is a list of all projects that I have done. I have made 2 chat apps, a To-Do list in react and node.js, a To-Do list in Python, and many more. Links to all these projects will be displayed below:</p>
+		<p style="text-align:center;">This is a list of all projects that I have done. I have a chat app, a To-Do list in react and node.js, a To-Do list in Python, and many more. Links to all these projects will be displayed below:</p>
 	 </header>
 		 <ul class="links">
 			 <header class="major">
