--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
 							</article>
 							<header class="major">
 								<article id="projects">
-							<a href="Projects.html" target="_blank"><h3>Projects</h3></a>
-								<p style="text-align:center;">Links to all my projects that I have created. Many more to come.</p>
+									<h3>Projects</h3>
+									<a href="Projects.html" target="_blank" class="button">View My Projects</a>
+
 							</header>
 						</article>
 							<article class="post featured">
