Fixed up button on Index page and CSS colour

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
 						<!-- Footer -->
 						<footer class="text-center">
-  							<a href="#"><button type="button" class="block">Back to Top</button></a>
-						</footer>
+							<a href="#" class="button">Back To Top</a>
+						  </footer>
 					</div>
 
 				<!-- Copyright -->
