Fixed the title of my Home page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Zamir Lalji <br> Backend Software Developer</h1>
+						<h1>Zamir Lalji <br> Software Developer</h1>
 						<p style="text-align:center;">Date/Time: <span id="datetime"></span></p>
 						<script>
 							function updateDateTime() {
